--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
+    "link": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "^0.73.4",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
